# rl_ros_simulation_lecture

./: CMakeLists.txt  README.md  package.xml
config/: initial_positions.yaml  pos_controller.yaml
config/rviz/: standing.rviz
launch/: iiwa.launch.py  launch_arm.launch.py  links.launch.py  links_gazebo.launch.py
src/: arm_position.cpp
urdf/: anymal.urdf.xacro  arm.urdf  arm.urdf.xacro  iiwa.urdf.xacro  links.urdf  links.urdf.xacro  ur.urdf.xacro
urdf/ros2_control/: joint_initial_pos.xacro
